<resources>
    <string name="app_name">Gallery</string>
    <string name="settings">Settings</string>
    <string name="info">App Info</string>
    <string name="share">Share</string>
    <string name="version">Version:</string>
    <string name="home">Home</string>
    <string name="album">Album</string>
    <string name="register">Create account</string>
    <string name="login">Log in</string>
    <string name="default_name">Name</string>
    <string name="default_password">Password</string>
    <string name="logout">Log out</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="loginLabel">"Login: "</string>
    <string name="changeLang">Change language</string>
    <string name="switchTheme">Switch theme</string>
    <string name="levels">Levels</string>
    <string name="cut">Crope</string>
    <string name="effects">Effects</string>
    <string name="close">Close</string>
    <string name="undo">Undo</string>
    <string name="forward">Redo</string>
    <string name="edit">Edit</string>
</resources>