<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home_svg"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_album"
        android:icon="@drawable/album_svg"
        android:title="@string/album"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_svg"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:title="@string/info"
        app:showAsAction="never" />
</menu>