<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:id="@+id/LinearLayoutPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/UndoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/undo"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/RedoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/forward"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/SaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayoutSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutPanel"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:transitionName="imageTransition"
         />

    <pack.gallery.views.CropOverlayView
        android:id="@+id/cropOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/LinearLayoutSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayoutTop"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayoutBottom"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LevelsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levels"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/CutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cut"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>